# claude-lab-skills

./: .codespellrc  .editorconfig  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.en.md  CONTRIBUTING.md  Makefile  README.en.md  README.md  RELEASING.md  SECURITY.md  pyproject.toml  renovate.json  validate_plugins.py
.claude-plugin/: marketplace.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: actionlint.yml  ci.yml  dependency-review.yml  release.yml  secrets-scan.yml
docs/: CONTEXT.md  DECISIONS.md  PORTING.md  SKILLS.md  TASKS.md  architecture.md
examples/: search-example.md
lab-automation-architecture/: README.en.md  README.md
lab-automation-architecture/.claude-plugin/: plugin.json
lab-automation-architecture/.claude/commands/: automation-review.md
lab-automation-architecture/skills/agmsg/: SKILL.md
lab-communication-translation/: README.en.md  README.md
lab-communication-translation/.claude-plugin/: plugin.json
lab-data-auth-ops/: README.en.md  README.md
lab-data-auth-ops/.claude-plugin/: plugin.json
lab-implementation-flow/: README.en.md  README.md
lab-implementation-flow/.claude-plugin/: plugin.json
lab-strategy-design/: README.en.md  README.md
lab-strategy-design/.claude-plugin/: plugin.json
lab-thinking-core/: README.en.md  README.md
lab-thinking-core/.claude-plugin/: plugin.json
src/lab-core/data/: glossary.md
tests/: test_bump_version.py  test_export_skill.py  test_gen_catalog.py  test_new_skill.py  test_search.py  test_validate_plugins.py
(+61 files in other folders)
